--- a/metadata.yaml
+++ b/metadata.yaml
@@ -3,12 +3,11 @@ creator:
   author:
     agent_name: Dostoyevsky, Fyodor
     aliases:
-    - "\u0414\u043E\u0441\u0442\u043E\u0435\u0432\u0441\u043A\u0438\u0439, \u0424\u0451\
-      \u0434\u043E\u0440 \u041C\u0438\u0445\u0430\u0439\u043B\u043E\u0432\u0438\u0447"
-    - "Dostoievski, F\xE9dor Mikhailovitch"
-    - Dostoievski, Fiodor
-    - Dostoievski, Fedor Mikhailovitch
     - Dostoevsky, Fyodor
+    - Dostoievski, Fedor Mikhailovitch
+    - Dostoievski, Fédor Mikhailovitch
+    - Достоевский, Фёдор Михайлович
+    - Dostoievski, Fiodor
     birthdate: 1821
     deathdate: 1881
     gutenberg_agent_id: '314'
@@ -24,10 +23,10 @@ publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
 subjects:
-- '!lcsh:Brothers -- Fiction'
-- '!lcsh:Fathers and sons -- Fiction'
-- '!lcc:PG'
 - '!lcsh:Didactic fiction'
+- '!lcsh:Fathers and sons -- Fiction'
 - '!lcsh:Russia -- Social life and customs -- 1533-1917 -- Fiction'
+- '!lcsh:Brothers -- Fiction'
+- '!lcc:PG'
 title: The Brothers Karamazov
 url: http://www.gutenberg.org/ebooks/28054
