--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,10 @@
 _repo: The-Brothers-Karamazov_28054
+covers:
+- attribution: Roberlan Borges, 2015
+  cover_type: original
+  image_path: cover.jpg
+  rights: Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)
+  rights_url: https://creativecommons.org/licenses/by-nc/4.0/
 creator:
   author:
     agent_name: Dostoyevsky, Fyodor
