--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
 language: ruby
-sudo: required
 before_install:
 - gem install asciidoctor tilt
-- sudo apt-get install xsltproc
 script:
-- git clone https://github.com/sethwoodworth/asciidoctor-htmlbook.git
-- asciidoctor -a toc -b xhtml5 -d book -T ./asciidoctor-htmlbook/htmlbook-autogen/
-  -d book The-Brothers-Karamazov.asciidoc -o The-Brothers-Karamazov.html
-- git clone https://github.com/sethwoodworth/HTMLBook
-- xsltproc -stringparam external.assets.list " " ./HTMLBook/htmlbook-xsl/epub.xsl
-  The-Brothers-Karamazov.html
+- VERSION=`ruby -e "require 'yaml'; meta = YAML.load_file('metadata.yaml'); puts meta['_version'];"`
+- git clone https://github.com/gitenberg-dev/asciidoctor-htmlbook.git
+- asciidoctor -a toc,version=$VERSION -b xhtml5 -T ./asciidoctor-htmlbook/htmlbook-autogen/
+  -d book book.asciidoc -o book.html
+- git clone https://github.com/gitenberg-dev/HTMLBook
+- xsltproc -stringparam external.assets.list " " ./HTMLBook/htmlbook-xsl/epub.xsl book.html
 - cp ./HTMLBook/stylesheets/epub/epub.css OEBPS
-- cp cover.png OEBPS/cover.png
-- zip -rX The-Brothers-Karamazov.epub mimetype
-- zip -rX The-Brothers-Karamazov.epub OEBPS/ META-INF/
+- cp cover.jpg OEBPS/cover.jpg
+- if test -d "./images"; then mv ./images ./OEBPS/ ;fi
+- zip -rX book.epub mimetype
+- zip -rX book.epub OEBPS/ META-INF/
+- if test -d "OEBPS/images/"; then zip -rX book.epub OEBPS/images/ ;fi 
+- mv book.epub The-Brothers-Karamazov.epub
 branches:
   only:
   - master
@@ -21,7 +22,11 @@ deploy:
   skip_cleanup: true
   provider: releases
   api_key:
-    secure: camcCzDaI/GoTa2LQqMc2rHAR5QQ9xMUnfXlymfNJKFvUn/m0vQ5uLBmVVyDUrFu/lMioDZ5RufOSE7nOAUf3hfNlg2ruQygolAhJ4McbGL03D734EpyC2iBjt8uBmd0rpTnTjiaC1iVPUSQodY0JkMMVcSB1FrbLP0mUbrraR4=
+    secure: xxxx
   file: The-Brothers-Karamazov.epub
-  on:
-    repo: sethwoodworth/The-Brothers-Karamazov_28054
+  "on":
+    repo: GITenberg/The-Brothers-Karamazov_28054
+addons:
+  apt:
+    packages:
+    - xsltproc
