--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Brothers-Karamazov_28054
-_version: 0.2.1
+_version: 0.2.2
 covers:
 - attribution: Roberlan Borges, 2015
   cover_type: original
@@ -20,6 +20,8 @@ creator:
     gutenberg_agent_id: '314'
     url: http://www.gutenberg.org/2009/agents/314
     wikipedia: http://en.wikipedia.org/wiki/Fyodor_Dostoevsky
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/28054#The-Brothers-Karamazov
 gutenberg_bookshelf: Best Books Ever Listings
 gutenberg_issued: '2009-02-12'
 gutenberg_type: Text
